--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://lycosa.zip/css.css">
     <link rel="stylesheet" href="empy3.css">    
+	<link rel="stylesheet" href="https://unpkg.com/7.css">
     <meta charset="UTF-8"> 
     <title>empy3</title>
 </head>
@@ -84,6 +85,23 @@ for (i = 0; i < toggler.length; i++) {
 <p>as a teen, em needed a quick buck, thus he began burning music cds for his classmates. distributing mp3 files and torrents would soon earn him the nickname empy3, in reference to the file format. now, he spends his time doing dj sets at local raves and clubs, as well as producing his own music.</p>
 </div>	
 <img id="empy3img" src="/data/images/random/ditheredempy3.png">
+
+<div id="window1">
+
+  <div class="window glass active" style="max-width: 200px">
+    <div class="title-bar">
+      <div class="title-bar-text">A glass window frame</div>
+      <div class="title-bar-controls">
+        <button aria-label="Minimize"></button>
+        <button aria-label="Close"></button>
+      </div>
+    </div>
+    <div class="window-body has-space">
+      <p>The background behind is blurred.</p>
+    </div>
+  </div>
+</div>
+</div>
 </div>
 </div>
 </body>
