--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -97,7 +97,14 @@ for (i = 0; i < toggler.length; i++) {
       </div>
     </div>
     <div class="window-body has-space">
-      <p>The background behind is blurred.</p>
+		<ul id="empyvitals">
+	  <li>NAME:		      EMMY</li>	
+      <li>FAMILY:         PHOCIDAE</li>
+	  <li>AGE:            26</li>
+	  <li>OCCUPATION:     DJ</li>
+	  <li>GENDER:         NON-BINARY (THEY/THEM)</li>
+	 <li>SEXUALITY:	  	  AROACE</li>
+	 </ul>
     </div>
   </div>
 </div>
