--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -97,13 +97,13 @@ for (i = 0; i < toggler.length; i++) {
       </div>
     </div>
     <div class="window-body has-space">
-		<ul id="empyvitals">
-	  <li>NAME:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;EMMY</li>	
-      <li>FAMILY:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PHOCIDAE</li>
-	  <li>AGE:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;26</li>
-	  <li>OCCUPATION:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DJ</li>
-	  <li>GENDER:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NON-BINARY (THEY/THEM)</li>
-	 <li>SEXUALITY:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AROACE</li>
+		<ul id="empyvitals" style="list-style-type:disc;">
+	  <li>NAME:		      EMMY</li>	
+      <li>FAMILY:         PHOCIDAE</li>
+	  <li>AGE:            26</li>
+	  <li>OCCUPATION:     DJ</li>
+	  <li>GENDER:         NON-BINARY (THEY/THEM)</li>
+	  <li>SEXUALITY:	  AROACE</li>
 	 </ul>
     </div>
   </div>
@@ -112,4 +112,4 @@ for (i = 0; i < toggler.length; i++) {
 </div>
 </div>
 </body>
-</html> 
+</html>
