--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -102,7 +102,7 @@ for (i = 0; i < toggler.length; i++) {
       <li>FAMILY:         PHOCIDAE</li>
 	  <li>AGE:            26</li>
 	  <li>OCCUPATION:     DJ</li>
-	  <li>GENDER:         NON-BINARY (THEY/THEM)</li>
+	  <li>GENDER:         NON-BINARY <i>(THEY/THEM)</i></li>
 	  <li>SEXUALITY:	  AROACE</li>
 	 </ul>
     </div>
