jeez thas a lotta errors

--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -97,13 +97,13 @@ for (i = 0; i < toggler.length; i++) {
       </div>
     </div>
     <div class="window-body has-space">
-		<ul id="empyvitals" style="list-style-type:disc;">
-	  <li>NAME:		      EMMY</li>	
-      <li>FAMILY:         PHOCIDAE</li>
-	  <li>AGE:            26</li>
-	  <li>OCCUPATION:     DJ</li>
-	  <li>GENDER:         NON-BINARY <i>(THEY/THEM)</i></li>
-	  <li>SEXUALITY:	  AROACE</li>
+		<ul id="empyvitals"; style="list-style-type: disc;">
+	  <span class="1vi"><li>NAME:</span>		   <span class="2vi">EMMY</li></span>	
+      <span class="1vi"><li>FAMILY:</span>         <span class="2vi">PHOCIDAE</li></span>
+	  <span class="1vi"><li>AGE:</span>            <span class="2vi">26</li></span>
+	  <span class="1vi"><li>OCCUPATION:</span>     <span class="2vi">DJ</li></span>
+	  <span class="1vi"><li>GENDER:</span>         <span class="2vi">NON-BINARY <i>(THEY/THEM)</i></li></span>
+	  <span class="1vi"><li>SEXUALITY:</span>	   <span class="2vi">AROACE</li></span>
 	 </ul>
     </div>
   </div>
