--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -99,21 +99,21 @@ for (i = 0; i < toggler.length; i++) {
     <div class="window-body has-space">
 		<ul id="empyvitals">
 
-<span class="vi1">
+<div class="vi1">
 NAME:	   
 FAMILY:        
 AGE:           
 OCCUPATION:   
 >GENDER:         
-SEXUALITY:</span>	
+SEXUALITY:</div>	
 
-<span class="vi2">
+<div class="vi2">
 EMMY
 PHOCIDAE
 26	
 DJ
 NON-BINARY <i>(THEY/THEM)</i>
-AROACE</span>
+AROACE</div>
 
 	 </ul>
     </div>
