--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -104,7 +104,7 @@ NAME:
 FAMILY:        
 AGE:           
 OCCUPATION:   
->GENDER:         
+GENDER:         
 SEXUALITY:</div>	
 
 <div class="vi2">
