--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -99,21 +99,20 @@ for (i = 0; i < toggler.length; i++) {
     <div class="window-body has-space">
 		<ul id="empyvitals">
 
-<div class="vi1">
-NAME:	   
-FAMILY:        
-AGE:           
-OCCUPATION:   
-GENDER:         
-SEXUALITY:</div>	
+<span class="vi1">NAME:</span><span class="vi2">EMMY</span>	   
+<span class="vi1">FAMILY:</span><span class="vi2">PHOCIDAE</span>        
+<span class="vi1">AGE:</span><span class="vi2">26</span>           
+<span class="vi1">OCCUPATION:</span><span class="vi2">DJ</span>   
+<span class="vi1">GENDER:</span><span class="vi2">NON-BINARY <i>(THEY/THEM)</i></span>         
+<span class="vi1">SEXUALITY:</span><span class="vi2">AROACE</span>	
 
-<div class="vi2">
-EMMY
-PHOCIDAE
-26	
-DJ
-NON-BINARY <i>(THEY/THEM)</i>
-AROACE</div>
+
+
+
+
+
+
+
 
 	 </ul>
     </div>
