fuck this shit omg

--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -99,12 +99,12 @@ for (i = 0; i < toggler.length; i++) {
     <div class="window-body has-space">
 		<ul id="empyvitals">
 
-<span class="vi1">NAME:</span><span class="vi2">EMMY</span>	   
-<span class="vi1">FAMILY:</span><span class="vi2">PHOCIDAE</span>        
-<span class="vi1">AGE:</span><span class="vi2">26</span>           
-<span class="vi1">OCCUPATION:</span><span class="vi2">DJ</span>   
-<span class="vi1">GENDER:</span><span class="vi2">NON-BINARY <i>(THEY/THEM)</i></span>         
-<span class="vi1">SEXUALITY:</span><span class="vi2">AROACE</span>	
+<p><span class="vi1">NAME:</span><span class="vi2">EMMY</span></p>	   
+<p><span class="vi1">FAMILY:</span><span class="vi2">PHOCIDAE</span></p>        
+<p><span class="vi1">AGE:</span><span class="vi2">26</span></p>           
+<p><span class="vi1">OCCUPATION:</span><span class="vi2">DJ</span></p>   
+<p><span class="vi1">GENDER:</span><span class="vi2">NON-BINARY <i>(THEY/THEM)</i></span></p>         
+<p><span class="vi1">SEXUALITY:</span><span class="vi2">AROACE</span></p>	
 
 
 
