--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -79,11 +79,8 @@ for (i = 0; i < toggler.length; i++) {
 </div>	
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 <img id="modular" src="\data\images\random\modular.png">
-<img id="tama" src="\data\images\random\tamagotchi.png">
 <img id="smiley" src="\data\images\random\smile.png">
-<div class="empytext3">
-<p>as a teen, em needed a quick buck, thus he began burning music cds for his classmates. distributing mp3 files and torrents would soon earn him the nickname empy3, in reference to the file format. now, he spends his time doing dj sets at local raves and clubs, as well as producing his own music.</p>
-</div>	
+<img id="smile2" src="\data\images\random\smile.png">
 <img id="empy3img" src="/data/images/random/.RAWR_empy3_transparentart.png">
 
 <div id="window1">
@@ -97,24 +94,7 @@ for (i = 0; i < toggler.length; i++) {
       </div>
     </div>
     <div class="window-body has-space">
-		<ul id="empyvitals">
-
-<p><span class="vi1">NAME:</span><span class="vi2">EMMY</span></p>	   
-<p><span class="vi1">FAMILY:</span><span class="vi2">PHOCIDAE</span></p>        
-<p><span class="vi1">AGE:</span><span class="vi2">26</span></p>           
-<p><span class="vi1">OCCUPATION:</span><span class="vi2">DJ</span></p>   
-<p><span class="vi1">GENDER:</span><span class="vi2">NON-BINARY <i>(THEY/THEM)</i></span></p>         
-<p><span class="vi1">SEXUALITY:</span><span class="vi2">AROACE</span></p>	
-
-
-
-
-
-
-
-
-
-	 </ul>
+		
     </div>
   </div>
 </div>
