--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script type="text/javascript" src="rainbow.js"></script>
     <link rel="stylesheet" href="https://lycosa.zip/css.css">
     <link rel="stylesheet" href="empy3.css">    
 	<link rel="stylesheet" href="https://unpkg.com/7.css">
@@ -82,21 +83,7 @@ for (i = 0; i < toggler.length; i++) {
 <img id="smiley" src="\data\images\random\smile.png">
 <img id="smile2" src="\data\images\random\smile.png">
 <img id="empy3img" src="/data/images/random/.RAWR_empy3_transparentart.png">
-
-<div id="window1">
-
-  <div class="window glass active" style="width: 210px">
-    <div class="title-bar">
-      <div class="title-bar-text">VITALS</div>
-      <div class="title-bar-controls">
-        <button aria-label="Minimize"></button>
-        <button aria-label="Close"></button>
-      </div>
-    </div>
-    <div class="window-body has-space">
-		
-    </div>
-  </div>
+<div id="rainbow">おい！</div>
 </div>
 </div>
 </div>
