--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -78,12 +78,14 @@ for (i = 0; i < toggler.length; i++) {
 <div id="empytext">
 <span class="empytext1">EMPY</span><span class="empytext2">3</span>
 </div>	
+<img id="PLURFX" src="/data/images/random/PLURFX.png">
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 <img id="modular" src="\data\images\random\modular.png">
 <img id="smiley" src="\data\images\random\smile.png">
-<img id="smile2" src="\data\images\random\smile.png">
 <img id="empy3img" src="/data/images/random/.RAWR_empy3_transparentart.png">
 <div id="rainbow">おい！</div>
+
+
 </div>
 </div>
 </div>
