--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -77,7 +77,10 @@ for (i = 0; i < toggler.length; i++) {
 <div class="containempy">
 <div id="empytext">
 <span class="empytext1">EMPY</span><span class="empytext2">3</span>
-</div>	
+</div>
+<img id="gradientplur" src="/data/images/random/gradient.png">
+<img id="gradientcapt" src="/data/images/random/gradient.png">
+<img id="CAPTCHALOGO" src="/data/images/random/CAPTCHALOGO.png">	
 <img id="PLURFX" src="/data/images/random/PLURFX.png">
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 <img id="modular" src="\data\images\random\modular.png">
