--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -80,8 +80,8 @@ for (i = 0; i < toggler.length; i++) {
 </div>
 <img id="gradientplur" src="/data/images/random/gradient.png">
 <img id="gradientcapt" src="/data/images/random/gradient.png">
-<img id="CAPTCHALOGO" src="/data/images/random/CAPTCHALOGO.png">	
-<img id="PLURFX" src="/data/images/random/PLURFX.png">
+<img id="CAPTCHALOGO" class="hov hsl" src="/data/images/random/CAPTCHALOGO.png">	
+<img id="PLURFX" class="hov hsl" src="/data/images/random/PLURFX.png">
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 <img id="modular" src="\data\images\random\modular.png">
 <img id="smiley" src="\data\images\random\smile.png">
