--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -80,7 +80,7 @@ for (i = 0; i < toggler.length; i++) {
 </div>
 <img id="gradientplur" src="/data/images/random/gradient.png">
 <img id="gradientcapt" src="/data/images/random/gradient.png">
-<img id="CAPTCHALOGO" class="hov hsl" src="/data/images/random/CAPTCHALOGO.png">	
+<img id="CAPTCHALOGO" class="hov1 hsl1" src="/data/images/random/CAPTCHALOGO.png">	
 <img id="PLURFX" class="hov hsl" src="/data/images/random/PLURFX.png">
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 <img id="modular" src="\data\images\random\modular.png">
