add favicon for empy3

--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	  <link rel="icon" type="image/x-icon" href="/data/images/random/faviconempy.gif">
 	<script type="text/javascript" src="rainbow.js"></script>
     <link rel="stylesheet" href="https://lycosa.zip/css.css">
     <link rel="stylesheet" href="empy3.css">    
