--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -20,7 +20,7 @@
   <li><span class="caret">landing</span>
 	<ul class="nested">
 <li><a href="https://lycosa.zip/">\index</a></li>
-<li><a href="/aboutme">\about me</a></li>
+<li><a href="/about">\about me</a></li>
 	</ul>
 	  </ul>
 	 	  <hr>
