--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -17,7 +17,7 @@
   <li><span class="caret">landing</span>
 	<ul class="nested">
 <li><a href="https://lycosa.zip/">\index</a></li>		
-<li><a href="/aboutme">\about me</a></li>
+<li><a href="/about">\about me</a></li>
 	</ul>
 	  </ul>
 	 	  <hr>
