--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div id="titlething">	 
 ^ you are here
 </div>  
-<li><a href="/aboutme">\about me</a></li>
+<li><a href="/about">\about me</a></li>
 	</ul>
 	  </ul>
 	 	  <hr>
