--- a/about.html
+++ b/about.html
@@ -77,26 +77,29 @@ for (i = 0; i < toggler.length; i++) {
 <div id="aboutcontainer">
     ABOUT ME
     </div>
+
 <div id="about"> 
+
+	
     i'm <b>lala</b> <i>[she/they, 11/02/20XX]</i>, a multipotentialist sapphic from urban washington state.</p>
     <hr>
     <br>
 <div id="mainabout"><p>i was an obsessive kid. and i don't say that as if i am not still a obsessive <i>[now teenager]</i> today. i've always been enamored with the idea of creating my own worlds and stories, which led me to start drawing and building original universes at an unusually young age. but 
 drawing isn't enough, i need to actually make these worlds and characters in a way that others can understand too! so i would write extensive documents on the worlds and stories i created, 
 to the point where stacks of paper would pile on my bedside table. with my fascination for animals <i>[including acting like a warrior cat during recess]</i>, a passion for art and character design,
-comes, of course, <b>furries.</b> 
+comes, of course, <b>furries!</b> 
 </p>      
 <p>i was around 9-10 years old when i discovered the furry fandom from an mspaint speedpaint on youtube. other people think like me? you can dress up as a colorful animal for fun? what's a fursona? i soon 
     was, as usual, obsessed. on the internet, you can call yourself anything you want, but you can also <b>be</b> anything you want. that turned from "what animal should i be?" to, unavoidably, "what can <i>i</i> be?"
 </p>
 
-<p>at some point, everyone was obsessed with labeling themself, me included feeling like i needed to fit into boxes of who i am or what i am. i am bi. - wait, no, i'm pan, for sure. - i think i'm not a girl? - i am non-binary and asexual. - but i want to be a guy! - i am a trans guy. - actually, i'm genderfluid and not asexual. 
-    - but mostly a guy. - i've been feeling more like a girl now? - why can't i just be whatever i want? but wait, you <b>can</b> be whatever you want. coming to terms with who i really am as a person took me 
+<p>at some point, everyone was obsessed with labeling themself, me included feeling like i needed to fit into boxes of who i am or what i am. <i>i am bi. - wait, no, i'm pan, for sure. - i think i'm not a girl? - i am non-binary. - but i want to be a guy! - i am a trans guy. - actually, i'm genderfluid. 
+    - but mostly a guy. - i've been feeling more like a girl now? - why can't i just be whatever i want?</i> but wait, you <b>can</b> be whatever you want. coming to terms with who i really am as a person took me 
 an especially long time, and the time you realize that a label doesn't define your gender or sexuality, that's when you can finally be yourself. i don't need a box to define my gender, and i don't need a box to define <b>myself.</b> 
 don't feel like you need labels to be you.</p>
 
-<p>make weird art. you don't need an "art style", "writing style", or any other kind of creative "style" to be yourself. you can be whatever you want. when you try to define yourself too strictly, you lose the joy of being yourself. 
-embrace the chaos of being you. i was so stuck trying to find a single profession or hobby that clicked, but if you stick to learning one thing, you miss everything.
+<p>make weird art! you don't need an "art style", "writing style", or any other kind of creative "style" to be yourself. you can be whatever you want. when you try to define yourself too strictly, you lose the joy of being yourself. 
+embrace the chaos of being you!! i was so stuck trying to find a single profession or hobby that clicked, but if you stick to learning one thing, you miss everything.
 </p>
 <p>be a multipotentialist. the best skill you can have is to create. create a website and self-host it, create useless logos/typography designs and stuff them away, create a new genre of music, make up a completely new species, the only limit you have is yourself.</p>
 </p>
