--- a/characters/ciro.html
+++ b/characters/ciro.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>KAIRO_terminal</title>
- <meta charset="UTF-8"> 	
-<link rel="stylesheet" href="/css.css">
-<link rel="stylesheet" href="alone.css">
-<link rel="stylesheet" href="https://pyscript.net/releases/2025.11.2/core.css" />
-<script type="module" src="https://pyscript.net/releases/2025.11.2/core.js"></script>	
+	 <meta charset="UTF-8"> 
+<title>kairo</title>
+<link rel="stylesheet" href="https://lycosa.zip/css.css">
+<link rel="stylesheet" href="ciro.css">  
 </head>
 <body>
-  
 
-
-  
-<div class="sidenav">
+ <div class="sidenav">
 <div id="titlething">	 
  navigation:
 </div>
@@ -21,29 +16,29 @@
 	   <ul id="sidenav">
   <li><span class="caret">landing</span>
 	<ul class="nested">
-<li><a href="https://lycosa.zip/">\index</a></li>
-<li><a href="/aboutme">\about me</a></li>
+<li><a href="https://lycosa.zip/">\index</a></li>		
+<li><a href="/about">\about me</a></li>
 	</ul>
-	  </li></ul>
+	  </ul>
 	 	  <hr>
 	   <ul id="sidenav">
   <li><span class="caret">characters</span>
 	<ul class="nested">
-<li><a href="/characters/lycosa">\lala</a></li>		
+<li><a href="/characters/lala">\lala</a></li>		
 <li><a href="/characters/empy3">\empy3</a></li>
-<li><a href="/characters/kairo">\kairo</a></li>
-<div id="titlething">	 
-^ you are ???
+<li><a href="/characters/ciro">\ciro</a></li>
+  <div id="titlething">	 
+^ you are here
 </div>  
 	</ul>
-	  </li></ul>
+	  </ul>
 	 	  <hr>
 	   <ul id="sidenav">
   <li><span class="caret">projects</span>
 	<ul class="nested">
 <li><a href="/projects/game">\game</a></li>
 	</ul>
-	  </li></ul>
+	  </ul>
 	  <hr>
 	 <ul id="sidenav">
  <li><span class="caret">resources</span>
@@ -53,7 +48,7 @@
 <li><a href="#">\musik</a></li>
 <li><a href="#">\design+art</a></li>		
 	</ul>
-	 </li></ul>
+	 </ul>
 	<hr>
 	 <ul id="sidenav">
  <li><span class="caret">fun</span>
@@ -63,7 +58,7 @@
 <li><a href="#">\artistz</a></li>
 <li><a href="#">\media</a></li>		
 	</ul>
-	 </li></ul>
+	 </ul>
 	<hr>	 
   <ul id="sidenav">
     <script>var toggler = document.getElementsByClassName("caret");
@@ -75,15 +70,24 @@ for (i = 0; i < toggler.length; i++) {
 	      this.classList.toggle("caret-down");
   });
 } </script>
-</ul>
 </div>
 <div class="main">
-<div id="text0">
-
-<p>Welcome, <b><i>KAIRO</i></b>, to the <i>Aperture Laboratories™</i> Secure Terminal.</p>
-<p>Please enter a command into the terminal below in order to select an option. Enter "?" to show a list of avaliable commands.</p>
+<div id="containurself">
+<div id="box">
+misanthropy
 </div>
+<div id="box1">	
+noun /mɪ'sæn.θrə.pi/
+</div>
+<div id="box2">	
+a deep hatred towards humankind.
+</div>
+</div>		
+
+<div id="ciroimg1">
+
+<img src="https://f2.toyhou.se/file/f2-toyhou-se/images/56229057_suv8fwIQyXJRYNX.png?1666157786" alt="placeholder"> 
 
 </div>
+</div>	
 </body>
-</html> 
