--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -32,7 +32,7 @@
 <div id="titlething">	 
 ^ you are here
 </div>  	
-<li><a href="/characters/kairo">\kairo</a></li>
+<li><a href="/characters/ciro">\ciro</a></li>
 	</ul>
 	  </ul>
 	 	  <hr>
