--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<ul class="nested">
 <li><a href="/characters/lala">\lala</a></li>		
 <li><a href="/characters/empy3">\empy3</a></li>
-<li><a href="/characters/kairo">\kairo</a></li>
+<li><a href="/characters/ciro">\ciro</a></li>
 	</ul>
 	  </ul>
 	 	  <hr>
