--- a/characters/ciro.html
+++ b/characters/ciro.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	 <meta charset="UTF-8"> 
-<title>kairo</title>
+<title>CIRO</title>
 <link rel="stylesheet" href="https://lycosa.zip/css.css">
 <link rel="stylesheet" href="ciro.css">  
 </head>
