--- a/characters/ciro.html
+++ b/characters/ciro.html
@@ -89,5 +89,11 @@ a deep hatred towards humankind.
 <img src="https://f2.toyhou.se/file/f2-toyhou-se/images/56229057_suv8fwIQyXJRYNX.png?1666157786" alt="placeholder"> 
 
 </div>
+<div id="maintext">
+<p>CIRO is</p>
+
+
+
+</div>
 </div>	
 </body>
