--- a/characters/ciro.html
+++ b/characters/ciro.html
@@ -90,7 +90,9 @@ a deep hatred towards humankind.
 
 </div>
 <div id="maintext">
-<p>CIRO is</p>
+<p>"CIRO" (CAPTCHA intelligent response omitter), is the most massive collection of data. They are an archive of everything created by the matter that surrounds us, being purely information.
+	CIRO's physical and visible entity is built from solidified plasma and merely serves as an accsessible and optical means of experimental matter.
+	Due to CIRO being the representation of information and data, they lack the ability to speak and instead communicate by transmitting radio frequencies, usually in the form of ambient bleeps and bloops.</p>
 
 
 
