--- a/characters/ciro.html
+++ b/characters/ciro.html
@@ -89,13 +89,26 @@ a deep hatred towards humankind.
 <img src="https://f2.toyhou.se/file/f2-toyhou-se/images/56229057_suv8fwIQyXJRYNX.png?1666157786" alt="placeholder"> 
 
 </div>
-<div id="maintext">
-<p>"CIRO" (CAPTCHA intelligent response omitter), is the most massive collection of data. They are an archive of everything created by the matter that surrounds us, being purely information.
-	CIRO's physical and visible entity is built from solidified plasma and merely serves as an accsessible and optical means of experimental matter.
-	Due to CIRO being the representation of information and data, they lack the ability to speak and instead communicate by transmitting radio frequencies, usually in the form of ambient bleeps and bloops.</p>
+<div id="maintext1">
+<p>"CIRO" (CAPTCHA intelligent response omitter), is the most massive collection of data. They are an archive of everything created by the matter that surrounds us, being purely information.</p>
 
 
 
 </div>
+
+<div id="maintext3">
+<p>CIRO's physical and visible entity is built from solidified plasma and merely serves as an accsessible and optical means of experimental matter.</p>
+
+
+
+</div>
+
+<div id="maintext2">
+<p>Due to CIRO being the representation of information and data, they lack the ability to speak and instead communicate by transmitting radio frequencies, usually in the form of ambient bleeps and bloops.</p>
+
+
+
+</div>
+
 </div>	
 </body>
