--- a/characters/ciro.html
+++ b/characters/ciro.html
@@ -72,17 +72,6 @@ for (i = 0; i < toggler.length; i++) {
 } </script>
 </div>
 <div class="main">
-<div id="containurself">
-<div id="box">
-misanthropy
-</div>
-<div id="box1">	
-noun /mɪ'sæn.θrə.pi/
-</div>
-<div id="box2">	
-a deep hatred towards humankind.
-</div>
-</div>		
 
 <div id="ciroimg1">
 
@@ -109,6 +98,8 @@ a deep hatred towards humankind.
 
 
 </div>
+
+<img id="CAPTCHALOGO" class="hov1 hsl1" src="/data/images/random/CAPTCHALOGO.png">	
 
 </div>	
 </body>
