--- a/characters/ciro.html
+++ b/characters/ciro.html
@@ -86,7 +86,7 @@ for (i = 0; i < toggler.length; i++) {
 </div>
 
 <div id="maintext3">
-<p>CIRO's physical and visible entity is built from solidified plasma and merely serves as an accsessible and optical means of experimental matter.</p>
+<p>CIRO's physical and visible entity is built from solidified plasma and merely serves as an accessible and optical means of experimental matter.</p>
 
 
 
