--- a/characters/ciro.html
+++ b/characters/ciro.html
@@ -79,7 +79,7 @@ for (i = 0; i < toggler.length; i++) {
 
 </div>
 <div id="maintext1">
-<p>"CIRO" (CAPTCHA intelligent response omitter), is the most massive collection of data. They are an archive of everything created by the matter that surrounds us, being purely information.</p>
+<p>"CIRO" (CAPTCHA Intelligent Response Omitter, pronounced seer-oh), is the most massive collection of data. They are an archive of everything created by the matter that surrounds us, being purely information.</p>
 
 
 
