yayayayayaya yayayay fix

--- a/characters/ciro.html
+++ b/characters/ciro.html
@@ -78,12 +78,8 @@ for (i = 0; i < toggler.length; i++) {
 <img src="https://f2.toyhou.se/file/f2-toyhou-se/images/56229057_suv8fwIQyXJRYNX.png?1666157786" alt="placeholder"> 
 
 </div>
-<div id="maintext1">
-<p>"CIRO" (CAPTCHA Intelligent Response Omitter, pronounced seer-oh), is the most massive collection of data. They are an archive of everything created by the matter that surrounds us, being purely information.</p>
+<div id="containurself">
 
-
-
-</div>
 
 <div id="maintext3">
 <p>CIRO's physical and visible entity is built from solidified plasma and merely serves as an accessible and optical means of experimental matter.</p>
@@ -99,7 +95,15 @@ for (i = 0; i < toggler.length; i++) {
 
 </div>
 
+<div id="maintext1">
+<p>"CIRO" (CAPTCHA Intelligent Response Omitter, pronounced seer-oh), is the most massive collection of data. They are an archive of everything created by the matter that surrounds us, being purely information.</p>
+
+
+
+</div>
+
 <img id="CAPTCHALOGO" class="hov1 hsl1" src="/data/images/random/CAPTCHALOGO.png">	
 
 </div>	
+</div>
 </body>
