--- a/characters/lala.html
+++ b/characters/lala.html
@@ -29,7 +29,7 @@
 ^ you are here
 </div>  		
 <li><a href="/characters/empy3">\empy3</a></li>
-<li><a href="/characters/kairo">\kairo</a></li>
+<li><a href="/characters/ciro">\ciro</a></li>
 	</ul>
 	  </ul>
 	 	  <hr>
