--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@ for (i = 0; i < toggler.length; i++) {
 <div id="about"> 
 
 	
-    i'm <b>lala</b> <i>[she/they, 11/02/20XX]</i>, a multipotentialist sapphic from urban washington state.</p>
+    i'm <b>lala</b> <i>[<a href="https://en.pronouns.page/@lycosid8">any pronouns</a>, 11/02/20XX]</i>, a multipotentialist sapphic from urban washington state.</p>
     <hr>
     <br>
 <div id="mainabout"><p>i was an obsessive kid. and i don't say that as if i am not still a obsessive <i>[now teenager]</i> today. i've always been enamored with the idea of creating my own worlds and stories, which led me to start drawing and building original universes at an unusually young age. but 
